[package]
name = "nickel-boilerplate"
version = "0.1.0"
authors = ["dotvirus <33938500+dotvirus@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.nickel]
version = "*"