[package]
name = "corinth"
version = "0.4.0"
authors = ["marvin-j97 <33938500+marvin-j97@users.noreply.github.com>"]
edition = "2018"

[dependencies]
actix-web = "3"
actix-files = "0.6.0"
lazy_static = "1.4.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = "0.4"
oysterpack_uid = "0.2.0"
qstring = "0.7.2"